--- a/css/main.css
+++ b/css/main.css
@@ -41,3 +41,12 @@ body::after {
   background-color: #4CAF50;
   color: white;
 }
+
+/*Element boxes*/
+.elementBox1 {
+  border-radius: 25px;
+  background: #73AD21;
+  padding: 20px; 
+  width: 200px;
+  height: 150px;  
+}
